--- a/public/index.html
+++ b/public/index.html
@@ -42,25 +42,27 @@
       <!-- Filters -->
       <div class="bg-white rounded-lg shadow p-4 mb-6">
         <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
-          <div>
+          <div title="Search post titles and body text for keywords">
             <label class="block text-sm font-medium text-gray-700 mb-1">Search</label>
             <input
               type="text"
               id="filter-search"
               placeholder="Search title/body..."
+              title="Search post titles and body text for keywords"
               class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
             >
           </div>
-          <div>
+          <div title="Filter to show posts from only one subreddit">
             <label class="block text-sm font-medium text-gray-700 mb-1">Subreddit</label>
             <select
               id="filter-subreddit"
+              title="Filter to show posts from only one subreddit"
               class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
             >
               <option value="">All Subreddits</option>
             </select>
           </div>
-          <div>
+          <div title="Only show posts with at least this many upvotes. Useful for filtering out low-quality or new posts.">
             <label class="block text-sm font-medium text-gray-700 mb-1">Min Score: <span id="min-score-value">0</span></label>
             <input
               type="range"
@@ -68,12 +70,13 @@
               min="0"
               max="100"
               value="0"
+              title="Only show posts with at least this many upvotes"
               class="w-full"
             >
           </div>
-          <div class="flex items-end">
+          <div class="flex items-end" title="When checked, only shows posts you've manually flagged as interesting">
             <label class="flex items-center space-x-2 cursor-pointer">
-              <input type="checkbox" id="filter-flagged" class="w-4 h-4 text-blue-600 rounded">
+              <input type="checkbox" id="filter-flagged" class="w-4 h-4 text-blue-600 rounded" title="Show only flagged posts">
               <span class="text-sm font-medium text-gray-700">Flagged only</span>
             </label>
           </div>
@@ -81,6 +84,7 @@
         <div class="mt-4 flex justify-between items-center">
           <button
             onclick="loadPosts()"
+            title="Apply all filter settings to refresh the post list"
             class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500"
           >
             Apply Filters
@@ -88,6 +92,7 @@
           <button
             onclick="triggerCollect()"
             id="collect-btn"
+            title="Manually trigger an RSS fetch from all enabled subreddits. Normally runs automatically every 30 minutes."
             class="px-4 py-2 bg-green-600 text-white rounded-md hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500"
           >
             Collect Now
