--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
     <div class="mb-6 border-b border-dark-border">
       <nav class="flex space-x-4">
         <button onclick="showView('posts')" id="tab-posts" class="tab-btn px-4 py-2 font-medium text-blue-400 border-b-2 border-blue-400">Posts</button>
+        <button onclick="showView('niches')" id="tab-niches" class="tab-btn px-4 py-2 font-medium text-dark-muted hover:text-white">Niches</button>
         <button onclick="showView('subreddits')" id="tab-subreddits" class="tab-btn px-4 py-2 font-medium text-dark-muted hover:text-white">Subreddits</button>
       </nav>
     </div>
@@ -133,6 +134,67 @@
       </div>
     </div>
 
+    <!-- Niches View -->
+    <div id="view-niches" class="hidden">
+      <!-- Niche Filters -->
+      <div class="bg-dark-card rounded-lg shadow-lg p-4 mb-6 border border-dark-border">
+        <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
+          <div>
+            <label class="block text-sm font-medium text-dark-muted mb-1">Search</label>
+            <input type="text" id="niche-filter-search" placeholder="Search niches..." 
+              class="w-full px-3 py-2 bg-dark-bg border border-dark-border rounded-md text-white placeholder-dark-muted focus:outline-none focus:ring-2 focus:ring-purple-500">
+          </div>
+          <div>
+            <label class="block text-sm font-medium text-dark-muted mb-1">Min Total: <span id="niche-min-total-value">0</span></label>
+            <input type="range" id="niche-filter-min-total" min="0" max="40" value="0" class="w-full accent-purple-500">
+          </div>
+          <div>
+            <label class="block text-sm font-medium text-dark-muted mb-1">Min Revenue: <span id="niche-min-revenue-value">0</span></label>
+            <input type="range" id="niche-filter-min-revenue" min="0" max="10" value="0" class="w-full accent-green-500">
+          </div>
+          <div>
+            <label class="block text-sm font-medium text-dark-muted mb-1">Min Defensibility: <span id="niche-min-def-value">0</span></label>
+            <input type="range" id="niche-filter-min-def" min="0" max="10" value="0" class="w-full accent-blue-500">
+          </div>
+        </div>
+        <div class="mt-4 flex items-center gap-4">
+          <label class="flex items-center space-x-2 cursor-pointer">
+            <input type="checkbox" id="niche-filter-evaluated" class="w-4 h-4 rounded bg-dark-bg border-dark-border text-purple-500 focus:ring-purple-500">
+            <span class="text-sm text-dark-muted">Evaluated only</span>
+          </label>
+          <button onclick="resetNicheFilters()" class="px-3 py-1.5 text-sm text-dark-muted hover:text-white border border-dark-border rounded-md hover:bg-dark-border">Reset Filters</button>
+        </div>
+      </div>
+
+      <!-- Niches Table -->
+      <div class="bg-dark-card rounded-lg border border-dark-border overflow-hidden">
+        <div class="overflow-x-auto">
+          <table class="w-full text-sm text-left">
+            <thead class="bg-dark-bg border-b border-dark-border">
+              <tr>
+                <th class="px-4 py-3 text-dark-muted font-medium">Description</th>
+                <th class="px-4 py-3 text-dark-muted font-medium">Parent Opportunity</th>
+                <th class="px-4 py-3 text-dark-muted font-medium text-center">Revenue</th>
+                <th class="px-4 py-3 text-dark-muted font-medium text-center">Defensibility</th>
+                <th class="px-4 py-3 text-dark-muted font-medium text-center">Total</th>
+                <th class="px-4 py-3 text-dark-muted font-medium">Source</th>
+              </tr>
+            </thead>
+            <tbody id="niches-table-body">
+              <tr><td colspan="6" class="px-4 py-8 text-center text-dark-muted">Loading niches...</td></tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+      <!-- Niche Pagination -->
+      <div id="niche-pagination" class="mt-6 flex justify-center items-center space-x-4 hidden">
+        <button onclick="prevNichePage()" id="niche-prev-btn" class="px-4 py-2 bg-dark-card border border-dark-border text-dark-text rounded-md hover:bg-dark-border disabled:opacity-50">Previous</button>
+        <span id="niche-page-info" class="text-dark-muted"></span>
+        <button onclick="nextNichePage()" id="niche-next-btn" class="px-4 py-2 bg-dark-card border border-dark-border text-dark-text rounded-md hover:bg-dark-border disabled:opacity-50">Next</button>
+      </div>
+    </div>
+
     <!-- Subreddits View -->
     <div id="view-subreddits" class="hidden">
       <div class="bg-dark-card rounded-lg shadow-lg p-4 mb-6 border border-dark-border">
@@ -190,6 +252,7 @@
     // View switching
     function showView(view) {
       document.getElementById('view-posts').classList.toggle('hidden', view !== 'posts');
+      document.getElementById('view-niches').classList.toggle('hidden', view !== 'niches');
       document.getElementById('view-subreddits').classList.toggle('hidden', view !== 'subreddits');
       
       document.querySelectorAll('.tab-btn').forEach(btn => {
@@ -202,6 +265,7 @@
       activeTab.classList.add('text-blue-400', 'border-b-2', 'border-blue-400');
       
       if (view === 'subreddits') loadSubreddits();
+      if (view === 'niches') loadNiches();
     }
 
     // Triage score badge
@@ -557,6 +621,88 @@
       }
     }
 
+    // === Niches ===
+    let nicheCurrentPage = 1;
+
+    function resetNicheFilters() {
+      document.getElementById('niche-filter-search').value = '';
+      document.getElementById('niche-filter-min-total').value = 0;
+      document.getElementById('niche-min-total-value').textContent = '0';
+      document.getElementById('niche-filter-min-revenue').value = 0;
+      document.getElementById('niche-min-revenue-value').textContent = '0';
+      document.getElementById('niche-filter-min-def').value = 0;
+      document.getElementById('niche-min-def-value').textContent = '0';
+      document.getElementById('niche-filter-evaluated').checked = false;
+      nicheCurrentPage = 1;
+      loadNiches();
+    }
+
+    function scoreBadge(score, max, color) {
+      if (score === null || score === undefined) return '<span class="text-dark-muted">—</span>';
+      return `<span class="px-2 py-0.5 text-xs font-medium rounded bg-${color}-600 text-white">${score}/${max}</span>`;
+    }
+
+    async function loadNiches() {
+      const search = document.getElementById('niche-filter-search').value;
+      const minTotal = document.getElementById('niche-filter-min-total').value;
+      const minRevenue = document.getElementById('niche-filter-min-revenue').value;
+      const minDef = document.getElementById('niche-filter-min-def').value;
+      const evaluated = document.getElementById('niche-filter-evaluated').checked;
+
+      const params = new URLSearchParams();
+      if (search) params.append('search', search);
+      if (minTotal > 0) params.append('minTotalScore', minTotal);
+      if (minRevenue > 0) params.append('minRevenueScore', minRevenue);
+      if (minDef > 0) params.append('minDefensibility', minDef);
+      if (evaluated) params.append('evaluated', 'true');
+      params.append('limit', pageSize);
+      params.append('offset', (nicheCurrentPage - 1) * pageSize);
+
+      try {
+        const res = await fetch(`/api/niches?${params}`);
+        const data = await res.json();
+
+        const tbody = document.getElementById('niches-table-body');
+        if (data.niches.length === 0) {
+          tbody.innerHTML = '<tr><td colspan="6" class="px-4 py-8 text-center text-dark-muted">No niches found</td></tr>';
+        } else {
+          tbody.innerHTML = data.niches.map(n => `
+            <tr class="border-b border-dark-border hover:bg-dark-border/30">
+              <td class="px-4 py-3">
+                <div class="font-medium text-white">${n.title}</div>
+                ${n.nicheDescription && n.nicheDescription !== n.title ? `<div class="text-xs text-dark-muted mt-1">${n.nicheDescription.substring(0, 150)}${n.nicheDescription.length > 150 ? '...' : ''}</div>` : ''}
+              </td>
+              <td class="px-4 py-3">
+                ${n.parentPost ? `<a href="${n.parentPost.url}" target="_blank" class="text-blue-400 hover:text-blue-300 text-sm">${n.parentPost.title.substring(0, 60)}${n.parentPost.title.length > 60 ? '...' : ''}</a>` : '<span class="text-dark-muted">—</span>'}
+              </td>
+              <td class="px-4 py-3 text-center">${scoreBadge(n.revenueScore, 10, 'green')}</td>
+              <td class="px-4 py-3 text-center">${scoreBadge(n.nicheDefensibility, 10, 'blue')}</td>
+              <td class="px-4 py-3 text-center">${scoreBadge(n.totalScore, 40, 'purple')}</td>
+              <td class="px-4 py-3"><span class="text-xs px-2 py-1 rounded bg-dark-bg text-dark-muted">${n.nicheSource || '—'}</span></td>
+            </tr>
+          `).join('');
+        }
+
+        // Pagination
+        const totalPages = Math.ceil(data.total / pageSize);
+        const pagination = document.getElementById('niche-pagination');
+        if (totalPages > 1) {
+          pagination.classList.remove('hidden');
+          document.getElementById('niche-page-info').textContent = `Page ${nicheCurrentPage} of ${totalPages}`;
+          document.getElementById('niche-prev-btn').disabled = nicheCurrentPage === 1;
+          document.getElementById('niche-next-btn').disabled = nicheCurrentPage === totalPages;
+        } else {
+          pagination.classList.add('hidden');
+        }
+      } catch (err) {
+        console.error('Error fetching niches:', err);
+        document.getElementById('niches-table-body').innerHTML = '<tr><td colspan="6" class="px-4 py-8 text-center text-red-400">Failed to load niches</td></tr>';
+      }
+    }
+
+    function prevNichePage() { if (nicheCurrentPage > 1) { nicheCurrentPage--; loadNiches(); } }
+    function nextNichePage() { nicheCurrentPage++; loadNiches(); }
+
     // Auto-filter on change
     const debouncedLoadPosts = debounce(() => { currentPage = 1; loadPosts(); }, 300);
 
@@ -596,6 +742,23 @@
     document.getElementById('new-subreddit').addEventListener('keypress', (e) => {
       if (e.key === 'Enter') addSubreddit();
     });
+
+    // Niche filter listeners
+    const debouncedLoadNiches = debounce(() => { nicheCurrentPage = 1; loadNiches(); }, 300);
+    document.getElementById('niche-filter-search').addEventListener('input', debouncedLoadNiches);
+    document.getElementById('niche-filter-min-total').addEventListener('input', (e) => {
+      document.getElementById('niche-min-total-value').textContent = e.target.value;
+      debouncedLoadNiches();
+    });
+    document.getElementById('niche-filter-min-revenue').addEventListener('input', (e) => {
+      document.getElementById('niche-min-revenue-value').textContent = e.target.value;
+      debouncedLoadNiches();
+    });
+    document.getElementById('niche-filter-min-def').addEventListener('input', (e) => {
+      document.getElementById('niche-min-def-value').textContent = e.target.value;
+      debouncedLoadNiches();
+    });
+    document.getElementById('niche-filter-evaluated').addEventListener('change', debouncedLoadNiches);
 
     // Initial load
     loadPosts();
