--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,12 @@
   </script>
   <style>
     body { background: #0f172a; }
+    .niche-desc-clamp {
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+    }
   </style>
 </head>
 <body class="bg-dark-bg min-h-screen text-dark-text">
@@ -166,8 +172,8 @@
         </div>
       </div>
 
-      <!-- Niches Table -->
-      <div class="bg-dark-card rounded-lg border border-dark-border overflow-hidden">
+      <!-- Niches Table (Desktop) -->
+      <div class="hidden md:block bg-dark-card rounded-lg border border-dark-border overflow-hidden">
         <div class="overflow-x-auto">
           <table class="w-full text-sm text-left">
             <thead class="bg-dark-bg border-b border-dark-border">
@@ -185,6 +191,11 @@
             </tbody>
           </table>
         </div>
+      </div>
+
+      <!-- Niches Cards (Mobile) -->
+      <div id="niches-cards-container" class="md:hidden space-y-3">
+        <p class="text-dark-muted text-center py-8">Loading niches...</p>
       </div>
 
       <!-- Niche Pagination -->
@@ -663,9 +674,12 @@
         const data = await res.json();
 
         const tbody = document.getElementById('niches-table-body');
+        const cardsContainer = document.getElementById('niches-cards-container');
         if (data.niches.length === 0) {
           tbody.innerHTML = '<tr><td colspan="6" class="px-4 py-8 text-center text-dark-muted">No niches found</td></tr>';
+          cardsContainer.innerHTML = '<p class="text-dark-muted text-center py-8">No niches found</p>';
         } else {
+          // Desktop table
           tbody.innerHTML = data.niches.map(n => `
             <tr class="border-b border-dark-border hover:bg-dark-border/30">
               <td class="px-4 py-3">
@@ -681,6 +695,39 @@
               <td class="px-4 py-3"><span class="text-xs px-2 py-1 rounded bg-dark-bg text-dark-muted">${n.nicheSource || '—'}</span></td>
             </tr>
           `).join('');
+
+          // Mobile cards
+          cardsContainer.innerHTML = data.niches.map(n => {
+            const descText = n.nicheDescription && n.nicheDescription !== n.title ? n.nicheDescription : '';
+            const cardId = 'niche-card-' + n.id.replace(/[^a-zA-Z0-9]/g, '');
+            const scoreItems = [
+              n.revenueScore !== null ? `<span class="px-1.5 py-0.5 rounded bg-green-600/20 text-green-400">R:${n.revenueScore}</span>` : '',
+              n.nicheDefensibility !== null ? `<span class="px-1.5 py-0.5 rounded bg-blue-600/20 text-blue-400">D:${n.nicheDefensibility}</span>` : '',
+              n.marketSizeScore !== null ? `<span class="px-1.5 py-0.5 rounded bg-yellow-600/20 text-yellow-400">M:${n.marketSizeScore}</span>` : '',
+              n.wtpScore !== null ? `<span class="px-1.5 py-0.5 rounded bg-orange-600/20 text-orange-400">W:${n.wtpScore}</span>` : '',
+              n.easeScore !== null ? `<span class="px-1.5 py-0.5 rounded bg-teal-600/20 text-teal-400">E:${n.easeScore}</span>` : '',
+              n.competitionScore !== null ? `<span class="px-1.5 py-0.5 rounded bg-red-600/20 text-red-400">C:${n.competitionScore}</span>` : '',
+            ].filter(Boolean).join(' ');
+
+            return `
+              <div class="bg-dark-card rounded-lg border border-dark-border p-4">
+                <div class="font-medium text-white text-sm leading-snug">${n.title}</div>
+                ${descText ? `
+                  <div id="${cardId}" class="text-xs text-dark-muted mt-1.5 leading-relaxed niche-desc-clamp cursor-pointer" onclick="this.classList.toggle('niche-desc-clamp')">${descText}</div>
+                ` : ''}
+                ${n.parentPost ? `
+                  <div class="mt-2">
+                    <a href="${n.parentPost.url}" target="_blank" class="text-blue-400 hover:text-blue-300 text-xs">↳ ${n.parentPost.title.substring(0, 80)}${n.parentPost.title.length > 80 ? '...' : ''}</a>
+                  </div>
+                ` : ''}
+                <div class="mt-2.5 flex flex-wrap items-center gap-1.5 text-xs font-medium">
+                  ${scoreItems || '<span class="text-dark-muted">No scores</span>'}
+                  ${n.totalScore !== null ? `<span class="px-1.5 py-0.5 rounded bg-purple-600 text-white font-bold ml-1">= ${n.totalScore}</span>` : ''}
+                </div>
+                ${n.nicheSource ? `<div class="mt-2"><span class="text-xs px-2 py-0.5 rounded bg-dark-bg text-dark-muted">${n.nicheSource}</span></div>` : ''}
+              </div>
+            `;
+          }).join('');
         }
 
         // Pagination
@@ -697,6 +744,7 @@
       } catch (err) {
         console.error('Error fetching niches:', err);
         document.getElementById('niches-table-body').innerHTML = '<tr><td colspan="6" class="px-4 py-8 text-center text-red-400">Failed to load niches</td></tr>';
+        document.getElementById('niches-cards-container').innerHTML = '<p class="text-red-400 text-center py-8">Failed to load niches</p>';
       }
     }
 
